# open-claw-agents

./: .gitignore  GIT_INITIALIZATION.md  IMPLEMENTATION_SUMMARY.md  OpenClaw_Deployment_Guide.docx  PHASE_1_CLAUDE_CODE_LOCAL.md  PHASE_2_PRAISONAI_CUSTOMIZATION.md  PHASE_3_GITAGENT_MANIFESTS.md  PHASE_4_IMPLEMENTATION_SPRINT.md  README.md  REPOSITORY_STRATEGY.md  ZED_SETUP.md  __main__.py  approval-gates.yml  config.py  manifest_loader.py  pipeline.py  pyproject.toml  requirements.txt  run_local.sh  setup_mac.sh  test_agents.py
agents/: README.md  __init__.py  base_agent.py  calendar.agent.yml  calendar.py  context_store.py  data.agent.yml  data.py  executor.agent.yml  executor.py  inference_agent.py  researcher.agent.yml  researcher.py
data/: agent_context.sql
inference/: __init__.py  router.py
openclaw/: __init__.py  __main__.py
templates/: README.md  base-agent.yml
tools/: README.md  calendar-tools.yml  data-tools.yml  git-tools.yml  inference-tools.yml  search-tools.yml
tools_lib/: __init__.py  publish.py  search.py
