[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw"
version = "1.0.0"
description = "Local AI agent system running on Ollama"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
openclaw = "openclaw.__main__:main_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw*"]
